fix alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -101,6 +101,7 @@ body {
   p {
     margin-bottom: 5px;
     margin-top: -10px;
+    min-height: 25px;
   }
 }
 
